--- a/base-app/src/index.html
+++ b/base-app/src/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
   <app-root></app-root>
+
+
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.4.4/polyfill.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.2.10/webcomponents-bundle.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/zone.js/0.9.1/zone.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.2.10/custom-elements-es5-adapter.js"></script>
+
+<script src="app-list-people/main-es5.js"></script>
+<script src="app-login/main-es5.js"></script> -->
 </body>
 </html>
